@@ -70,7 +70,7 @@ public class SegmentProcessor {
 
     public List<CurveSegment> getSegmentFromCache(Double from, Double to, Integer scale) {
         if (!segmentCache.containsKey(scale))
-            return Collections.emptyList();
+            return new ArrayList<>();
 
         var segments = segmentCache.get(scale);
 
@@ -81,7 +81,7 @@ public class SegmentProcessor {
         return segments.stream()
                 .filter(segment -> Double.compare(segment.getFirstKey(), from) >= 0
                         && Double.compare(segment.getLastKey(), to) < 0)
-                .toList();
+                .collect(Collectors.toList());
 
     }
 
